--- a/index.html
+++ b/index.html
@@ -1,62 +1,1 @@
-﻿<!doctype html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Androiddemo</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/github-dark.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <meta name="format-detection" content="telephone=no">
-    <meta http-equiv="x-rim-auto-match" content="none"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-    <div class="wrapper">
-        <header class="without-description">
-            <h1>随叫随到\(^o^)/~：</h1>
-        </header>
-        <section>
-          
-            <a href="sms:13526636963" type="button" class="btn btn-primary">发短信</a>
-            <hr>
-            <a href="sms:13526636963?body=你好！" type="button" class="btn btn-primary">安卓带内容短信</a>
-            <hr>
-            <a href="sms:13526636963&body=你好！" type="button" class="btn btn-primary">苹果带内容短信</a>
-            <hr>
-            <a href="sms:13526636963;body=你好！" type="button" class="btn btn-primary">苹果带内容短信</a>
-            <hr>        
-            <a href="tel:13526636962" type="button" class="btn btn-warning">呼叫奴婢</a>
-            <hr>
-            <a href="mailto:897379293@qq.com" type="button" class="btn btn-danger">发送邮件<a>
-            <hr>
-            <a href="wtai://wp/mc;13526636963" type="button" class="btn btn-success">呼叫奴婢</a>
-            <hr>
-            
-            <input name="phone_no" format="*m" value="13" />
-             <do type="option" label="呼出号">
-                <go href="wtai://wp/mc;$(phone_no)" />
-            </do>
-            <a href="wtai://wp/ap;135266369625;" type="button" class="btn btn-info">存储至电话簿</a>
-            <hr/>
-                <input type="file" accept="image/*" capture="camera">图片
-                <input type="file" accept="video/*" capture="camcorder">视频
-                <input type="file" accept="audio/*" capture="microphone">音频
-
-                <hr> <hr> <hr>
-                <h4>由于手机 和 浏览器种类繁多，部分功能不能使用。请见谅！</h4>
-        </section>
-    </div>
-    <footer>
-        <p>Project maintained by <a href="https://github.com/a-qiang">qiang</a></p>
-        <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-</body>
-
-</html>
+<!DOCTYPE html><html><head><title>基于Vue2.0仿微信应用</title><meta charset=utf-8><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><meta name=viewport content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src=https://sinacloud.net/vue-wechat/js/qrcode.min.js></script><link href=/static/css/app.be2a1a009d1ddc4d9441fd88ceb01206.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.7c6b9a81d670f8795dbe.js></script><script type=text/javascript src=/static/js/vendor.e508698e61088b22956f.js></script><script type=text/javascript src=/static/js/app.e6513d0c1159370213c3.js></script></body></html>
